# synthdesk-agency

./: README.md  pyproject.toml
analysis/candles/: __init__.py  describe_day.py  distribution.py  temporal_structure.py
analysis/regimes/: classify_day_v1.py
builders/: README.md  candle_builder_v1.py
docs/: AGENCY_INVARIANTS.md  ARCHITECTURE.md  DECISION_TRACE.md  INTERFACES.md  NON_GOALS.md  phase_d_freeze.md
docs/audits/: semantic_audit_v0.md
inspection/: assert_candle_integrity.py  assert_tick_gaps.py  assert_tick_integrity.py  assert_tick_rate.py
inspection/regime_observability_artifacts/: README.md  render_ascii.py  render_table.py
scripts/: analyze_run.py  run_temporal_snapshot_examples.sh
synthdesk_agency/: __init__.py
synthdesk_agency/adapters/: __init__.py  listener.py  snapshot.py
synthdesk_agency/core/: __init__.py  agency.py  agency_snapshot.py  context.py  decision.py  decision_kinds.py  regime.py  regime_churn.py  regime_churn_analyzer.py  regime_context.py  regime_hypothesis.py  regime_registry.py  regime_semantics.py  temporal_regime_snapshot.py  trace.py
synthdesk_agency/datasets/: __init__.py  loader.py  schema.py
synthdesk_agency/evaluation/: __init__.py  aggregates.py  aggregation.py  disagreement.py  harness.py  ranking.py  scorecard.py  scorer.py  scores.py  scoring.py  simulation.py  simulator.py  temporal.py  temporal_analysis.py  temporal_disagreement.py  temporal_disagreement_analysis.py  temporal_snapshot.py  timeseries.py  weighting.py
synthdesk_agency/policies/: __init__.py  base.py  (+2 more)
tools/: run_candle_analysis_day.py
(+18 files in other folders)
